--- a/source_windows/config.conf
+++ b/source_windows/config.conf
@@ -3,7 +3,7 @@ hotkey=Alt+v
 # window settings
 width=480
 height=360
-background_img=img.png
+background_img=./data/img.png
 overwrite_xy=0
 x=0
 y=0
